# Copyright 2024 The Chromium Authors and Alex313031
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/chromeos/ui_mode.gni")
import("//mojo/public/tools/bindings/mojom.gni")

assert(is_chromeos_ash, "Sample System Web App is ash-chrome only")

mojom("mojo_bindings") {
  sources = [
    "sample_system_web_app_shared_ui.mojom",
    "sample_system_web_app_ui.mojom",
    "sample_system_web_app_untrusted_ui.mojom",
  ]

  public_deps = [ "//mojo/public/mojom/base" ]
  webui_module_path = "/"
}
